ci: check for code lints with Pylint
